<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <ScrollView android:id="@+id/iphone_13___14___1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout
                android:id="@+id/page_iphone_13___14___1_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View   android:id="@+id/_bg__iphone_13___14___1_ek2"
                    android:background="@drawable/_bg__iphone_13___14___1_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="420dp"
                    android:layout_height="844dp" />


                <RelativeLayout android:id="@+id/iconamoon_home_thin"
                    android:layout_marginTop="807dp"
                    android:layout_marginStart="186dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </RelativeLayout>


                <RelativeLayout android:id="@+id/iconamoon_profile_thin"
                    android:layout_marginTop="807dp"
                    android:layout_marginStart="290dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <View   android:id="@+id/rectangle_2"
                    android:background="@drawable/rectangle_2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="108dp" />

                <TextView android:id="@+id/bus_tracky"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:textColor="@color/_bg__iconamoon_home_thin_ek1_color"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="38dp"
                    android:layout_width="278dp"
                    android:layout_height="94dp"
                    android:text="@string/bus_tracky_string"
                    />

                <ImageView android:id="@+id/rectangle_4"
                    android:src="@drawable/rectangle_4"
                    android:contentDescription="rectangle_4"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="280dp"
                    android:layout_width="333dp"
                    android:layout_height="449dp" />

                <ImageView
                    android:id="@+id/unsplash_kxcq_xvekcu"
                    android:layout_width="333dp"
                    android:layout_height="157dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="280dp"
                    android:contentDescription="unsplash_kxcq_xvekcu"
                    android:src="@drawable/unsplash_kxcq_xvekcu" />

                <ImageView android:id="@+id/image_1"
                    android:src="@drawable/image_1"
                    android:contentDescription="image_1"
                    android:layout_marginStart="131dp"
                    android:layout_marginTop="140dp"
                    android:layout_width="133.07dp"
                    android:layout_height="130dp" />

                <View   android:id="@+id/rectangle_3"
                    android:background="@drawable/rectangle_3_shape"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="471dp"
                    android:layout_width="245dp"
                    android:layout_height="62dp" />

                <TextView android:id="@+id/srec_bus_tracker"
                    android:textSize="25sp"
                    android:textColor="@color/_bg__iconamoon_home_thin_ek1_color"
                    android:layout_marginLeft="86dp"
                    android:layout_marginTop="487dp"
                    android:layout_width="239.5dp"
                    android:layout_height="39.5dp"
                    android:text="@string/srec_bus_tracker_string"
                    />



                <Button
                    android:id="@+id/loginButton"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/_bg__iconamoon_home_thin_ek1_color"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="620dp"
                    android:layout_width="230.5dp"
                    android:layout_height="55.5dp"
                    android:backgroundTint="@color/app_theme_light"
                    android:text="@string/go_to_app_string"
                    />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>
